--- a/subprojects/degrees-and-programs/source/static/app/assemble/modules/_dap-feature.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/modules/_dap-feature.hbs
@@ -27,6 +27,10 @@ module: true
 
 					{{> dap-results this }}
 
+					<div class="dap-form">
+						{{> dap-discover-keyword-form }}
+					</div>
+
 				</div>
 
 			{{/with}}
