--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-results.hbs
@@ -21,13 +21,10 @@
                                     <p class="desc">{{desc}}</p>
                                     <a href="{{href}}" title="View landing page for {{{title}}} program">Learn More {{svg "double-chevron"}}</a>
                                 </div>
-                                <span class="close">
-                                    {{svg "close"}}
-                                </span>
                             </div>
-                            <div class="active-content-toggle">
-                                <span>i</span>
-                            </div>
+                            <a href="#" class="active-content-toggle" title="Toggle result content">
+                                {{svg "close"}}
+                            </a>
                         </div>
 
                         <div class="result-content">
