--- a/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-form.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-form.scss
@@ -44,38 +44,6 @@ $palettes: map-merge($palettes, (
 
 	}
 
-	.filter-types {
-
-		.large-5 {
-
-			&:first-child {
-				
-				@include breakpoint(large) {
-					width: 44%;
-				}
-
-			}
-
-			&:last-child {
-
-				@include breakpoint(large) {
-					width: 44%;
-				}
-
-			}
-
-		}
-
-		.large-2 {
-
-			@include breakpoint(large) {
-				width: 12%;
-			}
-
-		}
-
-	}
-
 	.program-type {
 		background-color: transparent;
 		padding: 0;
@@ -147,4 +115,41 @@ $palettes: map-merge($palettes, (
 
 	}
 
+}
+
+.dap-undergraduate-form,
+.dap-graduate-form {
+
+	.filter-types {
+
+		.large-5 {
+
+			&:first-child {
+				
+				@include breakpoint(large) {
+					width: 44%;
+				}
+
+			}
+
+			&:last-child {
+
+				@include breakpoint(large) {
+					width: 44%;
+				}
+
+			}
+
+		}
+
+		.large-2 {
+
+			@include breakpoint(large) {
+				width: 12%;
+			}
+
+		}
+
+	}
+	
 }
