--- a/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/modules/_dap-feature.scss
@@ -30,6 +30,14 @@ $dap-feature-background-image-width: rem-calc(1396);
 		height: 100%;
 	}
 
+	&.is-transitioning {
+
+		.dap-form {
+			pointer-events: none;
+		}
+		
+	}
+
 	.dap-feature-inner {
 		position: relative;
 	}
@@ -364,6 +372,11 @@ $dap-feature-background-image-width: rem-calc(1396);
 
 		}
 
+	}
+
+	datalist {
+		background-color: $white;
+		color: $black;
 	}
 
 }
