--- a/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-discover-form.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-discover-form.scss
@@ -6,7 +6,10 @@ $palettes: map-merge($palettes, (
 ));
 
 .dap-discover-form {
-	padding: rem-calc(35 0 30);
+
+	@include breakpoint(medium) {
+		padding: rem-calc(35 0 20);
+	}
 
 	.filter-types {
 		display: none;
