--- a/app/assets/stylesheets/layout_old/middle-right-container.scss
+++ b/app/assets/stylesheets/layout_old/middle-right-container.scss
@@ -15,3 +15,14 @@
     width: 50%;
   }
 }
+
+// This is a temporary fix to make the 2 & 3 column spacing consistent. The "magic numbers" for the 3 column
+// width percentages are needed in order to match the existing 2 column width as closely as possible.
+.primaryContent.threeColumns .middleRightContainer {
+  @include media($large-screen){
+    width: 48.5%;
+    padding: 0px;
+  }
+
+  @media (min-width: 1120px) { width: 51%; }
+}
