--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -83,22 +83,11 @@
       svg { color: $black; }
     }
 
-    .main-menu {
-      padding: 18px;
-      color: $cu-off-canvas-nav-background;
-      background: $cu-off-canvas-nav-text;
-      font-size: 13px;
-      font-weight: 800;
-      letter-spacing: 0.25px;
-      text-transform: uppercase;
-      border-bottom: 1px solid $cu-off-canvas-nav-border-secondary;
-    }
-
     .off-canvas-nav {
-      width: 100%;
+      /* Width is 200% to put menus side-by-side in umbrella context */
+      width: 200%;
       position: relative;
       left: 0;
-      cursor: pointer;
       @include transition(all, 0.375s, ease-in-out);
 
       li {
@@ -111,7 +100,37 @@
         }
       }
 
-      .off-canvas-main {
+      // Menus: Main / Umbrella menus. When umbrella present, menu slide back-and-forth.
+      .off-canvas-menu {
+
+        // Float these to put main and umbrella side-by-side and slide back and forth.
+        float: left;
+        width: 400px;
+
+        .menu-header {
+          padding: 18px;
+          color: $cu-off-canvas-nav-background;
+          background: $cu-off-canvas-nav-text;
+          font-size: 13px;
+          font-weight: 800;
+          letter-spacing: 0.25px;
+          text-transform: uppercase;
+          border-bottom: 1px solid $cu-off-canvas-nav-border-secondary;
+
+          a {
+            color:$white;
+          }
+
+          // Menu Labels
+          span.menu-label {
+
+          }
+
+          a.toggle-menu-label {
+            display: block;
+            float: right;
+          }
+        }
 
         > ul {
           > li {
@@ -310,6 +329,10 @@
           }
         }
       }
+    }
+
+    #off-canvas-main {
+      position: relative;
     }
   }
 
