--- a/app/views/omni_nav_v2/_off_canvas_nav.html.erb
+++ b/app/views/omni_nav_v2/_off_canvas_nav.html.erb
@@ -2,33 +2,41 @@
 <div class="off-canvas-overlay" id="js-off-canvas-overlay"></div>
 
 <div class="off-canvas-nav-container" id="js-off-canvas-nav-container">
+  <!-- OffCanvasNav Header -->
   <div class="cu-off-canvas-header">
     <div class="cu-logo-wrapper">
-        <div class="primary-logo">
-          <a class="default-logo-cu off-logo" href="/" title="Chapman University Website Home Page">
-            <!-- logo set as background image by class -->
-          </a>
-        </div>
-
-        <% if @page_umbrella_category.present? %>
-        <!-- This will be displayed conditionally by format in Cascade -->
-        <div class="secondary-logo">
-          <a class="<%= @page_umbrella_category[2] %> off-logo" href="/" title="<%= @page_umbrella_category[4] %>">
-            <!-- logo set as background image by class -->
-          </a>
-        </div>
-        <% end %>
+      <!-- This will be displayed conditionally by format in Cascade -->
+      <% if @page_umbrella_category.present? %>
+      <div id="umbrella-logo" class="toggle-logo">
+        <a class="<%= @page_umbrella_category[2] %> off-logo" href="/" title="<%= @page_umbrella_category[4] %>">
+          <!-- logo set as background image by class -->
+        </a>
+        <span class="close" id="js-close-off-canvas-nav">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
+            <title></title>
+            <g id="icomoon-ignore"></g>
+            <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
+          </svg>
+        </span>
+      </div>
+      <% end %>
+      
+      <div id="main-logo" class="toggle-logo">
+        <a class="default-logo-cu off-logo" href="/" title="Chapman University Website Home Page">
+          <!-- logo set as background image by class -->
+        </a>
+        <span class="close" id="js-close-off-canvas-nav">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
+            <title></title>
+            <g id="icomoon-ignore"></g>
+            <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
+          </svg>
+        </span>
+      </div>
     </div>
-
-    <span class="close" id="js-close-off-canvas-nav">
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 512 512">
-        <title></title>
-        <g id="icomoon-ignore"></g>
-        <path d="M446.627 110.627l-45.254-45.254-145.373 145.372-145.373-145.372-45.254 45.253 145.373 145.374-145.373 145.373 45.254 45.254 145.373-145.373 145.373 145.373 45.254-45.255-145.372-145.372z"></path>
-      </svg>
-    </span>
   </div>
 
+  <!-- OffCanvasNav Menu(s) -->
   <div class="off-canvas-nav clearfix" id="js-off-canvas-nav">
     <% if @page_umbrella_category.present? %>
     <div id="off-canvas-umbrella" class="off-canvas-menu">
