final changes for CES to Education
can change blogs path now from /ces to /education; create new case in
News/Events javascript for Education not CES and change urls and text
files for caching.

--- a/app/assets/stylesheets/themes/education.scss
+++ b/app/assets/stylesheets/themes/education.scss
@@ -1,4 +1,4 @@
-//attallah school but /education folder
+//attallah college but /education folder
 #theme.education {
   @include theme-color-classes($education-primary);
   
