--- a/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
@@ -7,6 +7,8 @@ cascade-build: false
 ---
 <!-- Set cascade-build to false if developing locally -->
 
+<h1 class="sr-only show-for-sr">Chapman University Degrees and Programs</h1>
+
 <div class="bigMasthead smallRotator" id="container">
     <header>
         <div id="cu_nav">
