Updates selectors in news-event widget stylesheets to match changes in format.

--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -99,12 +99,15 @@
       }
     }
     .newsEventsContent {
-      h3 .bullet {
-        font-size: 12px;
-        position: relative;
-        // left: 2px;
-        bottom: 2px;
-        display: none;
+      div.title {
+        margin-top: 0;
+
+        .bullet {
+          font-size: 12px;
+          position: relative;
+          bottom: 2px;
+          display: none;
+        }
       }
     }
     .tabContent {
