--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -23,7 +23,7 @@ $tab-content-border-color: #c1c1c1;
 
   a { border-bottom: none; text-decoration: none;}
   // Story titles
-  h3 {
+  div.title {
     margin: 10px 0 0 0;
     a {
       font-weight: normal;
