--- a/app/views/widgets/left_column/_news_event_left_col.html
+++ b/app/views/widgets/left_column/_news_event_left_col.html
@@ -1,99 +1,148 @@
 <% #
-   # Copied from Dev Cascade on 2017-03-06
+   # Copied from Dev Cascade on 2017-09-28
    # /_cascade/formats/modular/widgets/Featured News Events Left Col
-   #
-   # Used to reproduce Events feed issue detailed here:
-   # https://github.com/chapmanu/cascade-assets/issues/160
    #
    # %>
 <!-- formats/modular/widgets/Featured News Events Left Col -->
 <div class="news-events-widget news-events-widget--left newsEvents">
-    <ul class="newsEventsNav">
-        <li class="active">Featured</li>
-        <li>News</li>
-        <li>Events</li>
-    </ul>
-    <ul class="newsEventsContent">
-        <a class="no-js-link" href="https://blogs.chapman.edu/happenings/" title="View All News Stories">View All News »</a>
-        <a class="no-js-link" href="https://events.chapman.edu" title="View All Event Listings">View All Events »</a>
-        <li class="active">
-            <div class="featured">
-                <img class="image" height="130" src="" width="225" alt="Chapman University"/>
-                <div class="date">
-                    <div class="day"></div>
-                    <div class="month"></div>
-                    <div class="year"></div>
-                </div>
-                <div class="title"></div>
-                <div class="description">View the published page to see this section.</div>
-                <div class="readMore"></div>
+  <ul class="newsEventsNav">
+    <li class="active">Featured</li>
+    <li class="">News</li>
+    <li class="">Events</li>
+  </ul>
+  <ul class="newsEventsContent">
+    <a class="no-js-link" href="https://blogs.chapman.edu/happenings/" title="View All News Stories">View All News »</a>
+    <a class="no-js-link" href="https://events.chapman.edu" title="View All Event Listings">View All Events »</a>
+    <li class="active">
+      <div class="featured">
+        <img alt="Chapman University’s New Physician Assistant Program Receives Accreditation Provisional" class="image" height="130" src="/_featured/_files/physician-assistant-small.jpg" width="225">
+        <div class="date">
+          <div class="day">
+            05
+          </div>
+          <div class="month">
+            OCT
+          </div>
+          <div class="year">
+            2016
+          </div>
+        </div>
+        <div class="title">
+          <a href="https://blogs.chapman.edu/happenings/2016/10/05/chapman-universitys-new-physician-assistant-program-receives-accreditation-provisional/">Chapman University’s New Physician Assistant Program Receives Accreditation Provisional</a>
+        </div>
+        <div class="description">
+          The accreditation provisional status allows the University to matriculate its first Physician Assistant students, which is planned for January 2017. Status is granted by the Accreditation Review Commission on the Education for Physician Assistant.
+        </div>
+        <div class="readMore">
+          <a href="https://blogs.chapman.edu/happenings/2016/10/05/chapman-universitys-new-physician-assistant-program-receives-accreditation-provisional/">Read More <span class="bullet">»</span></a>
+        </div>
+      </div>
+    </li>
+    <li class="">
+      <div class="news clearfix">
+        <img alt="Loading events list..." class="loading" src="../../../../_files/level/img/ajax-loader.gif" style="display: none;">
+        <div class="story story1" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              28
             </div>
-        </li>
-        <li>
-            <div class="news clearfix">
-                <img class="loading" src="/_files/level/img/ajax-loader.gif" alt="Loading news list..."/>
-                <div class="story story1" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <div class="story story2" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <div class="story story3" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <a class="allNews" href="">View all News »</a>
+            <div class="month">
+              SEP
             </div>
-        </li>
-        <li>
-            <div class="events clearfix">
-                <img class="loading" src="../_files/level/img/ajax-loader.gif" alt="Loading events list..."/>
-                <div class="story story1" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <div class="story story2" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <div class="story story3" itemscope="itemscope" itemtype="http://schema.org/Article">
-
-                    <div class="date" itemprop="datePublished">
-                        <div class="day"></div>
-                        <div class="month"></div>
-                        <div class="year"></div>
-                    </div>
-                    <h3><a href="#"></a></h3>
-                </div>
-                <a class="allEvents" href="">View all Events »</a>
+            <div class="year">
+              2017
             </div>
-        </li>
-    </ul>
+          </div>
+          <div class="title">
+            <a href="https://blogs.chapman.edu/happenings/2017/09/28/chapman-receives-largest-orange-county-gift-from-w-m-keck-foundation/">Chapman receives largest Orange County gift from W. M. Keck Foundation</a>
+          </div>
+        </div>
+        <div class="story story2" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              26
+            </div>
+            <div class="month">
+              SEP
+            </div>
+            <div class="year">
+              2017
+            </div>
+          </div>
+          <div class="title">
+            <a href="https://blogs.chapman.edu/happenings/2017/09/26/70-years-school-desegregation-mendez-westminster/">70 years later, O.C. school desegregation case echoes on campus - 'Mendez v. Westminster' remembered during National Hispanic Heritage Month</a>
+          </div>
+        </div>
+        <div class="story story3" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              26
+            </div>
+            <div class="month">
+              SEP
+            </div>
+            <div class="year">
+              2017
+            </div>
+          </div>
+          <div class="title">
+            <a href="https://blogs.chapman.edu/happenings/2017/09/26/sylvia-mendez-segregation-still-exists-public-schools/">Sylvia Mendez: De facto segregation still exists in public schools</a>
+          </div>
+        </div><a class="allNews" href="http://blogs.chapman.edu/happenings">View all News »</a>
+      </div>
+    </li>
+    <li class="">
+      <div class="events clearfix">
+        <img alt="Loading events list..." class="loading" src="../../../../_files/level/img/ajax-loader.gif" style="display: none;">
+        <div class="story story1" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              28
+            </div>
+            <div class="month">
+              SEPT
+            </div>
+            <div class="year">
+              2017
+            </div>
+          </div>
+          <div class="title">
+            <a href="https://events.chapman.edu/41518">Chapman Veg*ns Meeting</a>
+          </div>
+        </div>
+        <div class="story story2" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              28
+            </div>
+            <div class="month">
+              SEPT
+            </div>
+            <div class="year">
+              2017
+            </div>
+          </div>
+          <div class="title">
+            <a href="https://events.chapman.edu/40538">PokePeople Meeting</a>
+          </div>
+        </div>
+        <div class="story story3" itemscope="itemscope" itemtype="http://schema.org/Article" style="visibility: visible;">
+          <div class="date" itemprop="datePublished">
+            <div class="day">
+              28
+            </div>
+            <div class="month">
+              SEPT
+            </div>
+            <div class="year">
+              2017
+            </div>
+          </div>
+          <div class="title">
+            <a href="https://events.chapman.edu/40756">Sketch Comedy Meeting</a>
+          </div>
+        </div><a class="allEvents" href="https://events.chapman.edu/">View all Events »</a>
+      </div>
+    </li>
+  </ul>
 </div>
